<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="16dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/tvLabelDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimesion_bottom_label_dialog"
        android:layout_marginStart="@dimen/dimension_bottom_btn_dialog"
        android:layout_marginEnd="@dimen/dimension_bottom_btn_dialog"
        android:text="@string/enter_pin"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableEndCompat="@drawable/ic_baseline_close_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlTeamPIN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelDialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:boxCornerRadiusBottomEnd="@dimen/container_into_margin"
        app:boxCornerRadiusBottomStart="@dimen/container_into_margin"
        app:boxCornerRadiusTopStart="@dimen/container_into_margin"
        app:boxCornerRadiusTopEnd="@dimen/container_into_margin"
        android:layout_marginTop="@dimen/container_into_margin"
        android:layout_marginStart="@dimen/dimension_bottom_btn_dialog"
        android:layout_marginEnd="@dimen/dimension_bottom_btn_dialog"
        android:hint="@string/enter_pin"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTeamPinCode"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:backgroundTint="@color/cancel_color"
        android:layout_marginTop="@dimen/dimension_button_to_label"
        android:layout_marginEnd="@dimen/container_into_margin"
        android:layout_marginBottom="@dimen/dimension_bottom_btn_dialog"
        android:layout_marginStart="@dimen/dimension_bottom_btn_dialog"
        android:text="@string/cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimension_height_button_dialog"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintTop_toBottomOf="@+id/tlTeamPIN"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/centerGuideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAccept"
        android:backgroundTint="@color/main_background"
        android:layout_marginTop="@dimen/dimension_button_to_label"
        android:layout_marginStart="@dimen/container_into_margin"
        android:layout_marginBottom="@dimen/dimension_bottom_btn_dialog"
        android:layout_marginEnd="@dimen/dimension_bottom_btn_dialog"
        android:text="@string/ok"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimension_height_button_dialog"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/centerGuideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuideline"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>